--- a/VRChat/88/1263688.html
+++ b/VRChat/88/1263688.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "b6E6FL/BQT8Jm1sRCk49+dLRQq1H3viE7THmMNZ8e5E="></script>
+    "pD8UVM962a5oc8gIOrOBczRCsmpskzBg24HFKcQz0rE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dアバター　Nanami","description":"オリジナル3Dモデル Nanami\n制作者 ミディ\n\n音楽系の衣装を着たクールなキャラクターです。この衣装はバーチャルyoutuberミディとほぼ同一のものです。\nDynamicBoneを導入することで、ケーブルを模した尻尾が揺れるようになります。\nまた、色替え改変が簡単になるよう、psdファイルを付属してあります。\n3/7 1.01 - 不要なファイルが含まれていた点とシェーダーの設定がおかしかった部分を修正\n\n【商品概要】\n\nUnityのHumanoid対応、fbx形式の3Dモデルです。\nデータはすべてUnityPackage内に収められております。\nアプリケーション、ゲーム、動画配信等にご利用いただけます。\nVRChat向けにセットアップしたNanami.unitypackageを同梱してあります。\n新しいプロジェクトを作成後、VRChatSDKとDynamicBoneを導入後、(DynamicBoneは必須ではありません)\nNanami.unitypackageをインポートしていただき、1.Sceneをダブルクリックしますと、セットアップ済みのSceneが読み込まれます。\nVRM形式への変換は自身でお願いいたします。\n\n【基本仕様】\n三角ポリゴン数:25869\nLip Sync: 5種\n表情アニメーション:4種\nVR(3点トラッキング)対応\n\n【商品内容】\nNanami.unitypackage\n-fbx\n-texture(psd)\n-MnMrShader(ミニさん作の商用利用ok、再配布ok、改造okのシェーダーを同梱しております)\n\nVRChatにアップロードする手順等は各自ご確認いただくようお願いします。\n\n\n●利用規約\n\n【はじめに】\n\nオリジナル3Dモデル Nanami（以下本データ）は、\nミディが制作したオリジナルキャラクターの3Dモデルです。\n本データの著作権は、制作者ミディに帰属します。\n\n本データを利用する時点で本規約に同意したものとします。\n本規約の内容は変更される場合があり、\nその際は最新のものが適応されます。\n\n【許諾事項】\n\n本データの購入者には、購入者以外が複製や利用ができない形態での\n本データの利用を許諾します。\n\n利用条件\nアバター『OK』/暴力表現『NG』/性的表現『NG』/\n改変『OK』/パーツ流用『OK』/再配布『NG』/\n法人『OK』/個人商用『OK』/クレジット表記『必要』\n\n【禁止事項】\n\n制作者に許可を得ない営利目的・商用目的の利用。\n\n過度の暴力表現/キャラクターのイメージを著しく損なう表現/\n公序良俗に反する目的/宗教・政治に関するもの/\nその他制作者が不適切と判断すること/\n前述のいずれか一つでも該当する場合の利用。\n　\n再配布（改変データを含む）\n\n各種サービスで購入者以外が自由に本データ及び改変データを\n利用可能な状態にすること。\n\n本データ及び改変データを使用したゲームやアニメーションにおいて、\n再度仕様できる状態の本データを含むデータの配布。\n\n【改変や流用について】\n\n改変後のデータの著作権もミディに帰属します。\nまた、改変後のデータにも本規約は適用されます。\n\n本データの一部又は全部を他データへ使用する場合、\n本データ由来の部分のデータの著作権はミディに帰属します。\nまた、その部分のデータにも本規約は適用されます。\n\n改変に他データを流用する場合は、\n該当データの利用規約も順守してください。\n\n【免責事項】\n\n本データを利用することで発生したトラブルや損失、損害に対して、\n制作者ミディは一切責任を負いません。\n本モデルのご使用は使用者の責任において行ってください。\n\n本データは予告なくアップデート、販売の停止をする場合があります。\n\n本規約において翻訳の都合上、他言語との差異が生じた場合\n日本語の利用規約を適用するものとします。\n\n2019年3月7日\nミディ\n\n質問等がございましたら下記の連絡先にご連絡ください。\n\n連絡先\nTwitter：@mid_midy\nEmail：mid.mid.midy@gmail.com","url":"https://booth.pm/ja/items/1263688","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/32214af3-d34c-494c-9bee-06372278a4c6/i/1263688/d1d3ee01-269c-4488-965a-2a6ebc2296b8_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b6E6FL/BQT8Jm1sRCk49+dLRQq1H3viE7THmMNZ8e5E="></script>
+    nonce="pD8UVM962a5oc8gIOrOBczRCsmpskzBg24HFKcQz0rE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -503,9 +503,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
