--- a/VRChat/77/1084477.html
+++ b/VRChat/77/1084477.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "iJK7FJOVD0RJ8Ccs3gAc5HAKxUgfMZ/iVDp31VarWRY="></script>
+    "PJ/sUs5U23+L7p0w6G+mH6jrukCkviVf/UeuPf1D76Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベース","description":"ベースの3Dモデルがなかったので作りました！\nVRC用のローポリ版と様々な用途に使えるハイポリ版二種類用意しています。改変等は自由です！二次配布は禁止とさせていただきます。\n\n注意事項をreadmeに書いています。必ず目を通してください。\n\n追記、一部テクスチャを変更しています。テクスチャは各自で用意してください。","url":"https://booth.pm/ja/items/1084477","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1084477/7de3ac94-3fa9-49ae-8fd2-5581b817d429_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iJK7FJOVD0RJ8Ccs3gAc5HAKxUgfMZ/iVDp31VarWRY="></script>
+    nonce="PJ/sUs5U23+L7p0w6G+mH6jrukCkviVf/UeuPf1D76Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -151,7 +151,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ベース
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -187,6 +187,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -296,9 +298,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
