--- a/VRChat/19/1081119.html
+++ b/VRChat/19/1081119.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "OuvYLepYWduAZFktnvdKZb3cyZDHFUDMOjgzunO+wdw="></script>
+    "6fVXKH1BJCsjQtOWCx7hnSjw4/IlSag59qQSW81u+lQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゼンマイねじ　3Dモデル","description":"ゼンマイねじ 3Dモデルの紹介\n\n\n本モデルは【VRChat】向けに作成したゼンマイねじです。\nなんちゃって機械になりたい方いかがでしょうか？\n\nぜひ使ってやってください。\n\n●内容物\n\n・Zenmai.unitypackage\n・FBXデータ,Blenderファイル,UVファイル(png)\n・画像資料\n・Readme\n\n\n------------------------------\n\n●利用条件\n\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1081119","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1081119/452f5aff-55ce-4663-9176-f771e68a0f7d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OuvYLepYWduAZFktnvdKZb3cyZDHFUDMOjgzunO+wdw="></script>
+    nonce="6fVXKH1BJCsjQtOWCx7hnSjw4/IlSag59qQSW81u+lQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -157,7 +157,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ゼンマイねじ　3Dモデル
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -193,6 +193,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -365,9 +367,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
