--- a/VRChat/00/1080000.html
+++ b/VRChat/00/1080000.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "K2XOn3Fbe/kUebnVEH9mEbCORa32xXuhOugfqWuFsws="></script>
+    "20ZjEkRkOWnWg3A1ymRsLUtbo4mSv82Ch9v8zpqKa+A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カンバス\u0026イーゼル3Dモデル.fbx","description":"VRChatで使用されることを想定した、約250ポリゴンのカンバスとイーゼルです。\nマテリアルはカンバスとイーゼルの二つに分かれており、\nテクスチャの該当部分をペイントソフト等で編集することでお好きな絵を表示することも可能です。\nなおテクスチャ素材はこちらのサイトから利用させていただいております。\n【フリーテクスチャ素材館様】　\n（https://free-texture.net/about）\nアバターとして利用する際はヒューマノイドリグを親子関係で設定してあるため、Unityにてアニメーションオーバーライドを適用し絵の表示を切り替えることも出来ます。\n方法は以下に記します\n\n","url":"https://booth.pm/ja/items/1080000","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ba7f3e00-a1bf-46d0-96b2-b333ec40ae45/i/1080000/c590d6ca-c1ba-47bc-8d5a-7bddeee83603_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K2XOn3Fbe/kUebnVEH9mEbCORa32xXuhOugfqWuFsws="></script>
+    nonce="20ZjEkRkOWnWg3A1ymRsLUtbo4mSv82Ch9v8zpqKa+A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               カンバス&amp;イーゼル3Dモデル.fbx
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
