--- a/VRChat/86/1079786.html
+++ b/VRChat/86/1079786.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "rGU19i7dVd9telhLpvEWQKpGZpOrER7lJrhDR8pRRdM="></script>
+    "bYoanQKV84U2PwG6eOymShRfeX81LBmVZOJz4bYGDTc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】コルクボード【Unitypackage】","description":"コルクボードです。\nunitypackageでの配布です。\n\nこの商品を利用したことで発生する損失やトラブル等に一切の責任を負いません。\nそれ以外は商用でもなんでもお好きに使ってください。\n\n大切な写真を飾ろう！\n\n2022/08/04\n数種類のコルクボードを追加しました。(掲載画像の3枚目以降)","url":"https://booth.pm/ja/items/1079786","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1079786/5ff23a2b-cfa0-45f8-b009-cdd3340e27be_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rGU19i7dVd9telhLpvEWQKpGZpOrER7lJrhDR8pRRdM="></script>
+    nonce="bYoanQKV84U2PwG6eOymShRfeX81LBmVZOJz4bYGDTc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -178,7 +178,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【無料】コルクボード【Unitypackage】
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -194,7 +194,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      577
+                                      578
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -210,10 +210,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      577
+                                      578
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -308,9 +310,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
