--- a/VRChat/61/1075361.html
+++ b/VRChat/61/1075361.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "NIhTqv+Kxki9iNQ6IvoYW+o2A+gpG+bBREBbnrhLqfs="></script>
+    "UMnWLLBMl6B0/1/ZST4L30xIFt5EIz+AiphvtCfCono="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VR\"Chat\"System","description":"他人の迷惑にならない様に、時と場所を弁えて使ってください。","url":"https://booth.pm/ja/items/1075361","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4367a840-2f6a-4ba3-b547-41699c7045cb/i/1075361/13b39f66-8fcc-4c34-9dc9-f56ad080ac07_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NIhTqv+Kxki9iNQ6IvoYW+o2A+gpG+bBREBbnrhLqfs="></script>
+    nonce="UMnWLLBMl6B0/1/ZST4L30xIFt5EIz+AiphvtCfCono="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VR"Chat"System
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
