--- a/VRChat/98/1064398.html
+++ b/VRChat/98/1064398.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "i4pTkBtK1uHgdu2Ns4J3OFRBdN8kLD9NjE/aXt0AGwQ="></script>
+    "wI8Kni1cBxzfCLdaQELA7DqBNCb0+K/51Wec9a/KWLo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"雷核槌「pRacker」","description":"VRChatでの利用を想定した大きめのハンマーです。△4428\nunitypackageでの提供となります。\nおまけの放電パーティクル・シェーダー設定済みprefab付属。","url":"https://booth.pm/ja/items/1064398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/7d19caf7-8413-4b46-abe2-17f1a8dd9250/i/1064398/37b9e183-94d8-4969-bb2b-cbfcdf41b195_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="i4pTkBtK1uHgdu2Ns4J3OFRBdN8kLD9NjE/aXt0AGwQ="></script>
+    nonce="wI8Kni1cBxzfCLdaQELA7DqBNCb0+K/51Wec9a/KWLo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               雷核槌「pRacker」
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -296,9 +298,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
