--- a/VRChat/09/1076309.html
+++ b/VRChat/09/1076309.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "5nFQ3orWU4HCFQdHdy9ofngYCrIqfFfo8qntIgNTjiU="></script>
+    "RY6Hc1qR7IvDBGh8D5tzbdEwM0FjE73irMZ++88aBD8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ソファー テクスチャ2種 △2034","description":"ポリゴン数:2034\nスタンダードシェーダーの使用を想定\n\nこの商品を利用したことで発生する損失やトラブル等に一切の責任を負いません。\nそれ以外は商用でもなんでもお好きに使ってください。","url":"https://booth.pm/ja/items/1076309","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1076309/dcd17dfb-b81c-4610-bc8c-02fb623aa422_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5nFQ3orWU4HCFQdHdy9ofngYCrIqfFfo8qntIgNTjiU="></script>
+    nonce="RY6Hc1qR7IvDBGh8D5tzbdEwM0FjE73irMZ++88aBD8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -156,7 +156,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【無料】ソファー テクスチャ2種 △2034
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -172,7 +172,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      390
+                                      392
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -188,10 +188,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      390
+                                      392
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -265,9 +267,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
