--- a/VRChat/59/1076059.html
+++ b/VRChat/59/1076059.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "h1uQg/rouggVe3Wt0MxzUFOy8nu6Bp/aeHuqKg5A82k="></script>
+    "J9FJLaA3cxpr+gD7QqP1ubnFna784ZsLfIf/O3xbfhE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バランスボール(無料配布あり)","description":"『バランスボール』\n\nVRchat用ですが特に用途の制限はないので\n下記を参考にご自由にお使いください。\n\nちょっとポリ数多め\n\n使い方\n\tArmatureに入れます。DynamicBone入れます。hipにDynamicBoneのcolliderを入れてInsideにして反応するようにします。フルトラ推奨。\n\n\n\tNormal.png : ノーマルマップです。ノーマルマップに対応したシェーダーに入れると質感が出ます。\n\tMetallicSmoothness.png : メタリックラフネスマップです。メタリックラフネスマップに対応したシェーダーに入れると質感が出ます。\n\n利用規約\n\n\t同梱のLICENSE.txtに準じます。\n\t要約：\n\t\t* テクスチャ、モデルなど製品に含まれるものを改変することを許可する\n\t\t* 商用利用可能\n\t\t* R-18での利用可能,R-18Gでの利用不可\n\t\t* 再配布/再販売の禁止,VRCにおけるペデスタル利用の可\n\t\t* VRMファイルへの利用の許可、ただし他者が利用できる形式での出力を許可しない\n\t\t* 政治, 宗教, 民族問題に関わる利用を禁止\n\t\t* 他者または集団に対する誹謗中傷のための利用を禁止\n\n\t作者または著作者は, 本製品に起因または関連, 利用によって生じる一切の請求, 損害, その他の義務について何らの責任も負わないものとします.\n\n\tこの規約は製品を購入, または入手した瞬間効力を発揮し利用者は規約に同意したものと見做します.\n\n\tこの規約は著作者が属する国の倫理の下で解釈されると見做します.\n\n\tまた, この規約は作者または著作者の意思により変更される可能性があります\n\n使用素材\n\n・【Arktoon-Shaders】 \n\tsynqark 様【https://booth.pm/ja/items/1027997】\n\n----------------------\n\n更新履歴\n\n2018/11/01 リリース\n2018/11/01 よりバランスボールっぽくなるよう更新\n2019/04/19 ライセンスファイルの追加、arktoonシェーダーの追加、プレファブの追加\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1076059","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1076059/50141d31-748e-4d6a-bc23-587da91077ae_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="h1uQg/rouggVe3Wt0MxzUFOy8nu6Bp/aeHuqKg5A82k="></script>
+    nonce="J9FJLaA3cxpr+gD7QqP1ubnFna784ZsLfIf/O3xbfhE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               バランスボール(無料配布あり)
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      161
+                                      162
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,10 +185,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      161
+                                      162
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -351,9 +353,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
